# id-ocr

./: .gitignore  CMakeLists.txt  README.md  demo.cc  ocr.cbp
example/: CMakeLists.txt  demo.cpp  demo.py  image_correction.cpp  ocr.py  run.py
example/include/: binaryzation.py
example/utils/: correct.py  correct_and_clip.py  demo.py  math.py  ocr.py  xzjz.py
include/: cvtColor.hpp  fourier.hpp  log.hpp  rotating.hpp
include/correct/: fourier.hpp  rotating.hpp
include/imgproc/: cvtColor.hpp
source/: main.cc
source/utils/: fourier.cc  rotating.cc
source/utils/correct/: fourier.cc  rotating.cc
thrid_party/: README.md  ocr.py
